--- a/index.html
+++ b/index.html
@@ -4,52 +4,113 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <title>chartroom</title>
 </head>
 <body>
-  <div class="container">
-    <main class="card">
-      <section class="side">
-        <input type="text" />
-        <ul class="user-list">
-          <li class="user-item">
-            <img class="avatar" src="https://picsum.photos/50/50" alt="avatar">
-            <div class="user-info">
-              <p>name 1</p>
-              <p>online</p>
+  <div id="app">
+    <div class="container">
+      <main class="card">
+        <section class="side">
+          <div class="search-input">
+            <button id="btnSend" type="button">送出</button>
+            <input type="text" placeholder="Search..." />
+          </div>
+          <ul class="user-list">
+            <li class="user-item" v-for="user in userList">
+              <img class="avatar" :src="user.avatar" :alt="user.alt">
+              <div class="user-info">
+                <p>{{ user.name }}</p>
+                <p>{{ user.online }}</p>
+              </div>
+            </li>
+          </ul>
+        </section>
+        <section class="chatroom">
+          <div class="chat-header">
+            <img class="chat-avatar" src="https://picsum.photos/50/50" alt="avatar" placeholder="Search">
+            <div class="chatroom-info">
+              <p class="name"><b>chatroom 1</b></p>
+              <small>Last seen: 2 hours ago</small>
             </div>
-          </li>
-          <li class="user-item">
-            <img class="avatar" src="https://picsum.photos/50/50" alt="avatar">
-            <div class="user-info">
-              <p>name 1</p>
-              <p>online</p>
-            </div>
-          </li>
-          <li class="user-item">
-            <img class="avatar" src="https://picsum.photos/50/50" alt="avatar">
-            <div class="user-info">
-              <p>name 1</p>
-              <p>online</p>
-            </div>
-          </li>
-        </ul>
-      </section>
-      <section class="content">
-        <textarea id="txtShow" disabled></textarea>
-        <input id="txtInput" type="text">
-        <button id="btnSend" onclick="sendMessage()">送出</button>
-      </section>
-    </main>
-</div>
-
+          </div>
+          <div class="message">
+            <textarea v-model="chatConent" rows="20" cols="70" disabled></textarea>
+          </div>
+          <div class="chat-footer">
+            <button id="btnSend" @click="sendMessage()">送出</button>
+            <input v-model="message" type="text" placeholder="Enter text here...">
+          </div>
+        </section>
+      </main>
+    </div>
+  </div>
 </body>
+
+<script type="module">
+new Vue({
+  el: '#app',
+  data() {
+    return {
+      url: `ws://localhost:5500`, 
+      webSocket: null,
+      userList: [
+        { name: 'name 1', avatar: 'https://picsum.photos/50/50', online: 'online', alt: 'avatar 1' },
+        { name: 'name 2', avatar: 'https://picsum.photos/50/50', online: 'online', alt: 'avatar 2' },
+        { name: 'name 3', avatar: 'https://picsum.photos/50/50', online: 'online', alt: 'avatar 3' },
+      ],
+      
+      // form value
+      message: '',
+      chatConent: '',
+    }
+  },
+  mounted() {
+    // 建立 WebSocket (本例 server 端於本地運行)
+    this.webSocket = new WebSocket(this.url)
+    this.initWebSocket();
+    this.getMessage();
+  },
+  methods: {
+    initWebSocket() {
+      // 監聽連線狀態
+      this.webSocket.onopen = () => {
+        console.log('open connection')
+      }
+
+      this.webSocket.onclose = () => {
+        console.log('close connection');
+      }
+    },
+    //接收 Server 發送的訊息
+    getMessage() {
+      this.webSocket.onmessage = event => {
+        let txt = event.data
+        if (!this.chatConent) this.chatConent = txt
+        else this.chatConent = this.chatConent + "\n" + txt
+      }
+    },
+    sendMessage() {
+      console.log('sendMessage', this.message)
+      this.webSocket.send(this.message);
+      this.message = '';
+    }
+  },
+})
+</script>
 <style>
+  /* reset */
+  p {
+    margin: 0;
+  }
+
   body {
     margin: 0;
     background-color: #f4f7f6;
   }
+  /* reset */
 
+  /* layout */
   .container {
     display: flex;
     align-items: center;
@@ -59,86 +120,88 @@
 
   .card {
     display: flex;
-    max-width: 1280px;
-    height: 400px;
+    max-width: 800px;
+    width: 90vw;
+    height: 500px;
     background: #fff;
     border-radius: 10px;
+  }  
+  /* common */
+  .avatar, .chat-avatar {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
   }
-
+  /* side */
   .side {
     padding: 1rem;
     border-right: 2px solid #f4f7f6;
   }
 
-  .user-list {
+  .side .search-input {
+    display: flex;
+  }
+
+  .side .user-list {
     padding: 0;
     margin: .5rem 0 0 0;
   }
 
-  .user-item {
+  .side .user-item {
     display: flex;
+    align-items: center;
     padding: .5rem;
   }
 
-  .user-item:hover {
+  .side .user-item:hover {
     background: #efefef;
   }
 
-  .user-item .avatar {
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
+  .side .user-info {
+    padding-left: .5rem;
   }
 
-  .user-info {
-    padding-left: 1rem;
+  .side .user-info small {
+    display: block;
+    margin-top: .5rem;
+  }
+  /* chatroom */
+  .chatroom {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
   }
 
-  .user-info p {
-    margin: 0;
+  .chatroom .chat-header {
+    display: flex;
+    padding: 1rem;
+    border-bottom: 2px solid #f4f7f6;
+  }
+
+  .chatroom .chat-header .chatroom-info {
+    padding-left: 0.5rem;
+  }
+
+  .chatroom .chat-header .chatroom-info .name {
+    padding-bottom: 0.5rem;
+  }
+
+  .chatroom .message {
+    flex: 1; 
+    padding: 1rem;
+  }
+
+  .chatroom .message textarea {
+    background: transparent;
+  }
+
+  .chatroom .chat-footer {
+    display: flex;
+    padding: 1rem;
+  }
+
+  .chatroom .chat-footer input {
+    flex: 1;
   }
 </style>
-<script>
-  // 建立 WebSocket (本例 server 端於本地運行)
-  let url = `ws://localhost:5500`
-  let webSocket = new WebSocket(url);
-
-  let keyinElem = document.querySelector('#txtInput');
-  let showElem = document.querySelector('#txtShow');
-
-  initWebSocket();
-  getMessage();
-
-  function initWebSocket() {
-    // 監聽連線狀態
-    webSocket.onopen = () => {
-      console.log('open connection')
-    }
-
-    webSocket.onclose = () => {
-      console.log('close connection');
-    }
-  }
-
-  //接收 Server 發送的訊息
-  function getMessage() {
-    webSocket.onmessage = event => {
-      let txt = event.data
-      if (!showElem.value) showElem.value = txt
-      else showElem.value = showElem.value + "\n" + txt
-      keyinElem.value = ""
-    }
-  }
-
-  function sendMessage() {
-    let txt = keyinElem.value;
-    console.log(webSocket)
-    webSocket.send(txt);
-  }
-
-  function onButtonClick(event) {
-    let txt = keyinElem.value;
-      webSocket.send(txt);
-  }
-</script>
 </html>
